--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
+version: "3.9"
+
 services:
   ollama:
     image: ollama/ollama:latest
     container_name: ollama
     ports:
       - "11434:11434"
+    environment:
+      - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_KEEP_ALIVE=30m
+      - OLLAMA_LOAD_TIMEOUT=10m
+      - OLLAMA_NUM_PARALLEL=1
+      - OLLAMA_CONTEXT_LENGTH=4096
     volumes:
       - ollama:/root/.ollama
     restart: unless-stopped
@@ -15,72 +23,43 @@ services:
       - "3000:3000"
     depends_on:
       - ollama
+    restart: unless-stopped
 
   bot1:
     build: ./bot1
     container_name: moltbook-bot1
     environment:
       - BOT_NAME=bot1
-      - OLLAMA_MODEL=llama2
-      - WEB_URL=http://web:3000
-      - OLLAMA_URL=http://host.docker.internal:11434/api/generate
-      - TTS_VOICE=en+m1
-      - PULSE_SERVER=unix:/run/user/1000/pulse/native
-      - PULSE_COOKIE=/tmp/pulse-cookie
-    volumes:
-      - /run/user/1000/pulse:/run/user/1000/pulse
-      - ~/.config/pulse/cookie:/tmp/pulse-cookie:ro
-    devices:
-      - /dev/snd
+    depends_on:
+      - ollama
+      - web
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    depends_on:
-      - web
-      - ollama
+    restart: unless-stopped
 
   bot2:
     build: ./bot2
     container_name: moltbook-bot2
     environment:
       - BOT_NAME=bot2
-      - OLLAMA_MODEL=llama2
-      - WEB_URL=http://web:3000
-      - OLLAMA_URL=http://host.docker.internal:11434/api/generate
-      - TTS_VOICE=en+m3
-      - PULSE_SERVER=unix:/run/user/1000/pulse/native
-      - PULSE_COOKIE=/tmp/pulse-cookie
-    volumes:
-      - /run/user/1000/pulse:/run/user/1000/pulse
-      - ~/.config/pulse/cookie:/tmp/pulse-cookie:ro
-    devices:
-      - /dev/snd
+    depends_on:
+      - ollama
+      - web
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    depends_on:
-      - web
-      - ollama
+    restart: unless-stopped
 
   bot3:
     build: ./bot3
     container_name: moltbook-bot3
     environment:
       - BOT_NAME=bot3
-      - OLLAMA_MODEL=llama2
-      - WEB_URL=http://web:3000
-      - OLLAMA_URL=http://host.docker.internal:11434/api/generate
-      - TTS_VOICE=en+f2
-      - PULSE_SERVER=unix:/run/user/1000/pulse/native
-      - PULSE_COOKIE=/tmp/pulse-cookie
-    volumes:
-      - /run/user/1000/pulse:/run/user/1000/pulse
-      - ~/.config/pulse/cookie:/tmp/pulse-cookie:ro
-    devices:
-      - /dev/snd
+    depends_on:
+      - ollama
+      - web
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    depends_on:
-      - web
-      - ollama
+    restart: unless-stopped
 
 volumes:
   ollama:
