--- a/web/package.json
+++ b/web/package.json
@@ -2,10 +2,9 @@
   "name": "moltbook-web",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "dependencies": {
     "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "body-parser": "^1.20.2"
   }
 }
 
